--- a/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
@@ -5,6 +5,7 @@
  */
 
 #include <mem.h>
+#include <dt-bindings/clock/mcux_lpc_syscon_clock.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/i2c/i2c.h>
 #include <arm/armv8-m.dtsi>
@@ -83,6 +84,13 @@
 	#address-cells = <1>;
 	#size-cells = <1>;
 
+	syscon: syscon@0 {
+		compatible = "nxp,lpc-syscon";
+		reg = <0x0 0x4000>;
+		label = "SYSCON";
+		#clock-cells = <1>;
+	};
+
 	iap: flash-controller@34000 {
 		compatible = "nxp,lpc-iap";
 		label = "FLASH_IAP";
@@ -131,6 +139,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x86000 0x1000>;
 		interrupts = <14 0>;
+		clocks = <&syscon MCUX_FLEXCOMM0_CLK>;
 		label = "FLEXCOMM_0";
 		status = "disabled";
 	};
@@ -139,6 +148,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x87000 0x1000>;
 		interrupts = <15 0>;
+		clocks = <&syscon MCUX_FLEXCOMM1_CLK>;
 		label = "FLEXCOMM_1";
 		status = "disabled";
 	};
@@ -147,6 +157,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x88000 0x1000>;
 		interrupts = <16 0>;
+		clocks = <&syscon MCUX_FLEXCOMM2_CLK>;
 		label = "FLEXCOMM_2";
 		status = "disabled";
 	};
@@ -155,6 +166,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x89000 0x1000>;
 		interrupts = <17 0>;
+		clocks = <&syscon MCUX_FLEXCOMM3_CLK>;
 		label = "FLEXCOMM_3";
 		status = "disabled";
 	};
@@ -163,6 +175,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x8a000 0x1000>;
 		interrupts = <18 0>;
+		clocks = <&syscon MCUX_FLEXCOMM4_CLK>;
 		label = "FLEXCOMM_4";
 		status = "disabled";
 	};
@@ -171,6 +184,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x96000 0x1000>;
 		interrupts = <19 0>;
+		clocks = <&syscon MCUX_FLEXCOMM5_CLK>;
 		label = "FLEXCOMM_5";
 		status = "disabled";
 	};
@@ -179,6 +193,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x97000 0x1000>;
 		interrupts = <20 0>;
+		clocks = <&syscon MCUX_FLEXCOMM6_CLK>;
 		label = "FLEXCOMM_6";
 		status = "disabled";
 	};
@@ -187,6 +202,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x98000 0x1000>;
 		interrupts = <21 0>;
+		clocks = <&syscon MCUX_FLEXCOMM7_CLK>;
 		label = "FLEXCOMM_7";
 		status = "disabled";
 	};
@@ -201,6 +217,7 @@
 			<&gpio1 26 GPIO_ACTIVE_LOW>; */
 		reg = <0x9f000 0x1000>;
 		interrupts = <59 0>;
+		clocks = <&syscon MCUX_HS_SPI_CLK>;
 		label = "HS_LSPI";
 		status = "disabled";
 		#address-cells = <1>;
