--- a/dts/arm/nxp/nxp_rt6xx_common.dtsi
+++ b/dts/arm/nxp/nxp_rt6xx_common.dtsi
@@ -6,6 +6,7 @@
 
 #include <mem.h>
 #include <arm/armv8-m.dtsi>
+#include <dt-bindings/clock/mcux_lpc_syscon_clock.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/i2c/i2c.h>
 
@@ -48,6 +49,20 @@
 	#address-cells = <1>;
 	#size-cells = <1>;
 
+	clkctl0: clkctl@1000 {
+		compatible = "nxp,lpc-syscon";
+		reg = <0x1000 0x4000>;
+		label = "CLKCTL_0";
+		#clock-cells = <1>;
+	};
+
+	clkctl1: clkctl@21000 {
+		compatible = "nxp,lpc-syscon";
+		reg = <0x21000 0x4000>;
+		label = "CLKCTL_1";
+		#clock-cells = <1>;
+	};
+
 	gpio0: gpio@0 {
 		compatible = "nxp,lpc-gpio";
 		reg = <0x100000 0x4000>;
@@ -79,6 +94,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x106000 0x1000>;
 		interrupts = <14 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM0_CLK>;
 		label = "FLEXCOMM_0";
 		status = "disabled";
 	};
@@ -87,6 +103,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x107000 0x1000>;
 		interrupts = <15 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM1_CLK>;
 		label = "FLEXCOMM_1";
 		status = "disabled";
 	};
@@ -95,6 +112,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x108000 0x1000>;
 		interrupts = <16 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM2_CLK>;
 		label = "FLEXCOMM_2";
 		status = "disabled";
 	};
@@ -103,6 +121,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x109000 0x1000>;
 		interrupts = <17 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM3_CLK>;
 		label = "FLEXCOMM_3";
 		status = "disabled";
 	};
@@ -111,6 +130,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x122000 0x1000>;
 		interrupts = <18 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM4_CLK>;
 		label = "FLEXCOMM_4";
 		status = "disabled";
 	};
@@ -119,6 +139,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x123000 0x1000>;
 		interrupts = <19 0>;
+		clocks = <&clkctl1 MCUX_FLEXCOMM5_CLK>;
 		label = "FLEXCOMM_5";
 		status = "disabled";
 	};
@@ -128,6 +149,7 @@
 		reg = <0x124000 0x1000>;
 		interrupts = <43 0>;
 		label = "FLEXCOMM_6";
+		clocks = <&clkctl1 MCUX_FLEXCOMM6_CLK>;
 		status = "disabled";
 	};
 
@@ -136,6 +158,7 @@
 		reg = <0x125000 0x1000>;
 		interrupts = <44 0>;
 		label = "FLEXCOMM_7";
+		clocks = <&clkctl1 MCUX_FLEXCOMM7_CLK>;
 		status = "disabled";
 	};
 
@@ -149,6 +172,7 @@
 			<&gpio1 17 GPIO_ACTIVE_LOW>; */
 		reg = <0x126000 0x1000>;
 		interrupts = <20 0>;
+		clocks = <&clkctl1 MCUX_HS_SPI_CLK>;
 		label = "HS_LSPI";
 		status = "disabled";
 		#address-cells = <1>;
