--- a/boards/arm/google_kukui/google_kukui.dts
+++ b/boards/arm/google_kukui/google_kukui.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f0/stm32f098Xc.dtsi>
+#include <st/f0/stm32f098rchx-pinctrl.dtsi>
 
 / {
 	model = "Google Kukui EC";
@@ -20,6 +21,7 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
