--- a/boards/arm/nucleo_f070rb/nucleo_f070rb.dts
+++ b/boards/arm/nucleo_f070rb/nucleo_f070rb.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f0/stm32f070Xb.dtsi>
+#include <st/f0/stm32f070rbtx-pinctrl.dtsi>
 #include "arduino_r3_connector.dtsi"
 
 / {
@@ -42,11 +43,13 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
 
 &usart2 {
+	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
 	current-speed = <115200>;
 	status = "okay";
 };
