--- a/boards/arm/stm32f030_demo/stm32f030_demo.dts
+++ b/boards/arm/stm32f030_demo/stm32f030_demo.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f0/stm32f030X4.dtsi>
+#include <st/f0/stm32f030f4px-pinctrl.dtsi>
 
 / {
 	model = "STM32F030 DEMO board";
@@ -37,6 +38,7 @@
 &gpiof {status = "disabled";};
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
