--- a/boards/arm/96b_wistrio/96b_wistrio.dts
+++ b/boards/arm/96b_wistrio/96b_wistrio.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/l1/stm32l151Xb-a.dtsi>
+#include <st/l1/stm32l151c(6-8-b)uxa-pinctrl.dtsi>
 #include "96b_lscon.dtsi"
 
 / {
@@ -39,11 +40,13 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
 
-&usart3 {
+&usart2 {
+	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
 	current-speed = <115200>;
 	status = "okay";
 };
