--- a/boards/arm/stm3210c_eval/stm3210c_eval.dts
+++ b/boards/arm/stm3210c_eval/stm3210c_eval.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f1/stm32f107Xc.dtsi>
+#include <st/f1/stm32f107v(b-c)tx-pinctrl.dtsi>
 
 / {
 	model = "STMicroelectronics STM3210C-EVAL board";
@@ -41,6 +42,7 @@
 };
 
 &usart2 {
+	pinctrl-0 = <&usart2_tx_pd5 &usart2_rx_pd6>;
 	current-speed = <115200>;
 	status = "okay";
 };
