--- a/boards/arm/96b_argonkey/96b_argonkey.dts
+++ b/boards/arm/96b_argonkey/96b_argonkey.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f4/stm32f412Xg.dtsi>
+#include <st/f4/stm32f412c(e-g)ux-pinctrl.dtsi>
 
 / {
 	model = "Tocoding Argonkey 96boards";
@@ -46,6 +47,7 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
