--- a/boards/arm/sensortile_box/sensortile_box.dts
+++ b/boards/arm/sensortile_box/sensortile_box.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/l4/stm32l4r9Xi.dtsi>
+#include <st/l4/stm32l4r9z(g-i)tx-pinctrl.dtsi>
 
 / {
 	model = "STMicroelectronics SensorTile.box board";
@@ -47,11 +48,13 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
 
 &usart2 {
+	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
 	current-speed = <115200>;
 	status = "okay";
 };
