--- a/boards/arm/stm32f769i_disco/stm32f769i_disco.dts
+++ b/boards/arm/stm32f769i_disco/stm32f769i_disco.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/f7/stm32f769Xi.dtsi>
+#include <st/f7/stm32f769nihx-pinctrl.dtsi>
 
 / {
 	model = "STMicroelectronics STM32F769I DISCOVERY board";
@@ -61,11 +62,13 @@ arduino_spi: &spi2 {};
 arduino_serial: &usart6 {};
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	current-speed = <115200>;
 	status = "okay";
 };
 
 &usart6 {
+	pinctrl-0 = <&usart6_tx_pc6 &usart6_rx_pc7>;
 	current-speed = <115200>;
 	status = "okay";
 };
