--- a/boards/arm/stm32g0316_disco/stm32g0316_disco.dts
+++ b/boards/arm/stm32g0316_disco/stm32g0316_disco.dts
@@ -6,6 +6,7 @@
 
 /dts-v1/;
 #include <st/g0/stm32g031X6.dtsi>
+#include <st/g0/stm32g031j(4-6)mx-pinctrl.dtsi>
 
 / {
 	model = "STMicroelectronics STM32G0316 Discovery board";
@@ -41,6 +42,7 @@
 };
 
 &usart1 {
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pb7>;
 	current-speed = <115200>;
 	status = "okay";
 };
