--- a/dts/arm/nxp/nxp_lpc54xxx.dtsi
+++ b/dts/arm/nxp/nxp_lpc54xxx.dtsi
@@ -35,7 +35,7 @@
 			compatible = "nxp,lpc-syscon";
 			reg = <0x40000000 0x4000>;
 			label = "SYSCON";
-			#clock-cells = <1>;
+			#clock-cells = <2>;
 		};
 
 		sram0:memory@20000000 {
@@ -93,7 +93,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40086000 0x1000>;
 			interrupts = <14 0>;
-			clocks = <&syscon MCUX_FLEXCOMM0_CLK>;
+			clocks = <&syscon 0 11>;
 			label = "FLEXCOMM_0";
 			status = "disabled";
 		};
@@ -102,7 +102,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40087000 0x1000>;
 			interrupts = <15 0>;
-			clocks = <&syscon MCUX_FLEXCOMM1_CLK>;
+			clocks = <&syscon 0 12>;
 			label = "FLEXCOMM_1";
 			status = "disabled";
 		};
@@ -111,7 +111,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40088000 0x1000>;
 			interrupts = <16 0>;
-			clocks = <&syscon MCUX_FLEXCOMM2_CLK>;
+			clocks = <&syscon 0 13>;
 			label = "FLEXCOMM_2";
 			status = "disabled";
 		};
@@ -120,7 +120,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40089000 0x1000>;
 			interrupts = <17 0>;
-			clocks = <&syscon MCUX_FLEXCOMM3_CLK>;
+			clocks = <&syscon 0 14>;
 			label = "FLEXCOMM_3";
 			status = "disabled";
 		};
@@ -129,7 +129,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x4008a000 0x1000>;
 			interrupts = <18 0>;
-			clocks = <&syscon MCUX_FLEXCOMM4_CLK>;
+			clocks = <&syscon 0 15>;
 			label = "FLEXCOMM_4";
 			status = "disabled";
 		};
@@ -138,7 +138,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40096000 0x1000>;
 			interrupts = <19 0>;
-			clocks = <&syscon MCUX_FLEXCOMM5_CLK>;
+			clocks = <&syscon 0 16>;
 			label = "FLEXCOMM_5";
 			status = "disabled";
 		};
@@ -147,7 +147,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40097000 0x1000>;
 			interrupts = <20 0>;
-			clocks = <&syscon MCUX_FLEXCOMM6_CLK>;
+			clocks = <&syscon 0 17>;
 			label = "FLEXCOMM_6";
 			status = "disabled";
 		};
@@ -156,7 +156,7 @@
 			compatible = "nxp,lpc-flexcomm";
 			reg = <0x40098000 0x1000>;
 			interrupts = <21 0>;
-			clocks = <&syscon MCUX_FLEXCOMM7_CLK>;
+			clocks = <&syscon 0 18>;
 			label = "FLEXCOMM_7";
 			status = "disabled";
 		};
