--- a/dts/arm/nxp/nxp_lpc55S1x_common.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S1x_common.dtsi
@@ -198,7 +198,7 @@
 		compatible = "nxp,lpc-spi";
 		reg = <0x9f000 0x1000>;
 		interrupts = <59 0>;
-		clocks = <&syscon MCUX_HS_SPI_CLK>;
+		clocks = <&syscon 2 28>;
 		label = "HS_LSPI";
 		status = "disabled";
 		#address-cells = <1>;
