--- a/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
@@ -88,7 +88,7 @@
 		compatible = "nxp,lpc-syscon";
 		reg = <0x0 0x4000>;
 		label = "SYSCON";
-		#clock-cells = <1>;
+		#clock-cells = <2>;
 	};
 
 	iap: flash-controller@34000 {
@@ -139,7 +139,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x86000 0x1000>;
 		interrupts = <14 0>;
-		clocks = <&syscon MCUX_FLEXCOMM0_CLK>;
+		clocks = <&syscon 0 11>;
 		label = "FLEXCOMM_0";
 		status = "disabled";
 	};
@@ -148,7 +148,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x87000 0x1000>;
 		interrupts = <15 0>;
-		clocks = <&syscon MCUX_FLEXCOMM1_CLK>;
+		clocks = <&syscon 0 12>;
 		label = "FLEXCOMM_1";
 		status = "disabled";
 	};
@@ -157,7 +157,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x88000 0x1000>;
 		interrupts = <16 0>;
-		clocks = <&syscon MCUX_FLEXCOMM2_CLK>;
+		clocks = <&syscon 0 13>;
 		label = "FLEXCOMM_2";
 		status = "disabled";
 	};
@@ -166,7 +166,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x89000 0x1000>;
 		interrupts = <17 0>;
-		clocks = <&syscon MCUX_FLEXCOMM3_CLK>;
+		clocks = <&syscon 0 14>;
 		label = "FLEXCOMM_3";
 		status = "disabled";
 	};
@@ -175,7 +175,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x8a000 0x1000>;
 		interrupts = <18 0>;
-		clocks = <&syscon MCUX_FLEXCOMM4_CLK>;
+		clocks = <&syscon 0 15>;
 		label = "FLEXCOMM_4";
 		status = "disabled";
 	};
@@ -184,7 +184,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x96000 0x1000>;
 		interrupts = <19 0>;
-		clocks = <&syscon MCUX_FLEXCOMM5_CLK>;
+		clocks = <&syscon 0 16>;
 		label = "FLEXCOMM_5";
 		status = "disabled";
 	};
@@ -193,7 +193,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x97000 0x1000>;
 		interrupts = <20 0>;
-		clocks = <&syscon MCUX_FLEXCOMM6_CLK>;
+		clocks = <&syscon 0 17>;
 		label = "FLEXCOMM_6";
 		status = "disabled";
 	};
@@ -202,7 +202,7 @@
 		compatible = "nxp,lpc-flexcomm";
 		reg = <0x98000 0x1000>;
 		interrupts = <21 0>;
-		clocks = <&syscon MCUX_FLEXCOMM7_CLK>;
+		clocks = <&syscon 0 18>;
 		label = "FLEXCOMM_7";
 		status = "disabled";
 	};
@@ -217,7 +217,7 @@
 			<&gpio1 26 GPIO_ACTIVE_LOW>; */
 		reg = <0x9f000 0x1000>;
 		interrupts = <59 0>;
-		clocks = <&syscon MCUX_HS_SPI_CLK>;
+		clocks = <&syscon 2 28>;
 		label = "HS_LSPI";
 		status = "disabled";
 		#address-cells = <1>;
