--- a/dts/bindings/clock/nxp,lpc-syscon.yaml
+++ b/dts/bindings/clock/nxp,lpc-syscon.yaml
@@ -15,7 +15,8 @@ properties:
       required: true
 
     "#clock-cells":
-      const: 1
+      const: 2
 
 clock-cells:
-  - name
+  - offset
+  - bit
